--- a/templates/tracking/batch_show.html.twig
+++ b/templates/tracking/batch_show.html.twig
@@ -129,78 +129,78 @@
                                 <i class="icon wb-plus" aria-hidden="false"></i>{{ 'tracking_page.batch_modify'|trans }}
                             </a>
                             <div class="table-responsive">
-                                <table class="table table-bordered table-striped table-hover dataTable table-custom table-userList text-md-left ">
+                                <table class="table table-bordered table-userList">
                                     <thead>
-                                        <th>{{ 'tracking_page.product_id' | trans }}</th>
-                                        <th>{{ batch.ProductId }}</th>
+                                        <th style="width: 200px">{{ 'tracking_page.product_id' | trans }}</th>
+                                        <td>{{ batch.ProductId }}</td>
                                     </thead>
                                     <thead>
                                         <th>{{ 'tracking_page.production_date' | trans }}</th>
-                                        <th>{{ batch.ProductionDate|date('Y年m月d日h:m:s') }}</th>
+                                        <td>{{ batch.ProductionDate|date('Y年m月d日h:m:s') }}</td>
                                     </thead>
                                     <thead>
                                         <th>{{ 'tracking_page.batch_id' | trans }}</th>
-                                        <th>{{ batch.BatchId }}</th>
+                                        <td>{{ batch.BatchId }}</td>
                                     </thead>
                                     <thead>
                                         <th>{{ 'tracking_page.starting_time' | trans }}</th>
-                                        <th>{{ batch.StartingTime |date('Y年m月d日h:m:s')}}</th>
+                                        <td>{{ batch.StartingTime |date('Y年m月d日h:m:s')}}</td>
                                     </thead>
                                     <thead>
                                         <th>{{ 'tracking_page.ranch_id' | trans }}</th>
-                                        <th>{{ batch.RanchId }}</th>
+                                        <td>{{ batch.RanchId }}</td>
                                     </thead>
                                     <thead>
                                         <th>{{ 'tracking_page.milk_collection_time' | trans }}</th>
-                                        <th>{{ batch.MilkCollectionTime|date('Y年m月d日h:m:s') }}</th>
+                                        <td>{{ batch.MilkCollectionTime|date('Y年m月d日h:m:s') }}</td>
                                     </thead>
                                     <thead>
                                         <th>{{ 'tracking_page.ranch_responsible' | trans }}</th>
-                                        <th>{{ batch.RanchResponsible }}</th>
+                                        <td>{{ batch.RanchResponsible }}</td>
                                     </thead>
                                     <thead>
                                         <th>{{ 'tracking_page.factory' | trans }}</th>
-                                        <th>{{ batch.Factory }}</th>
+                                        <td>{{ batch.Factory }}</td>
                                     </thead>
                                     <thead>
                                         <th>{{ 'tracking_page.factory_processing_time' | trans }}</th>
-                                        <th>{{ batch.FactoryProcessingTime|date('Y年m月d日h:m:s') }}</th>
+                                        <td>{{ batch.FactoryProcessingTime|date('Y年m月d日h:m:s') }}</td>
                                     </thead>
                                     <thead>
                                         <th>{{ 'tracking_page.factory_responsible' | trans }}</th>
-                                        <th>{{ batch.FactoryResponsible }}</th>
+                                        <td>{{ batch.FactoryResponsible }}</td>
                                     </thead>
                                     <thead>
                                         <th>{{ 'tracking_page.factory_delivery_time' | trans }}</th>
-                                        <th>{{ batch.FactoryDeliveryTime|date('Y年m月d日h:m:s') }}</th>
+                                        <td>{{ batch.FactoryDeliveryTime|date('Y年m月d日h:m:s') }}</td>
                                     </thead>
                                     <thead>
                                         <th>{{ 'tracking_page.factory_delivery_responsible' | trans }}</th>
-                                        <th>{{ batch.FactoryDeliveryResponsible }}</th>
+                                        <td>{{ batch.FactoryDeliveryResponsible }}</td>
                                     </thead>
                                     <thead>
                                         <th>{{ 'tracking_page.export_time' | trans }}</th>
-                                        <th>{{ batch.ExportTime|date('Y年m月d日h:m:s') }}</th>
+                                        <td>{{ batch.ExportTime|date('Y年m月d日h:m:s') }}</td>
                                     </thead>
                                     <thead>
                                         <th>{{ 'tracking_page.export_responsible' | trans }}</th>
-                                        <th>{{ batch.ExportResponsible }}</th>
+                                        <td>{{ batch.ExportResponsible }}</td>
                                     </thead>
                                     <thead>
                                         <th>{{ 'tracking_page.import_time' | trans }}</th>
-                                        <th>{{ batch.ImportTime|date('Y年m月d日h:m:s') }}</th>
+                                        <td>{{ batch.ImportTime|date('Y年m月d日h:m:s') }}</td>
                                     </thead>
                                     <thead>
                                         <th>{{ 'tracking_page.import_responsible' | trans }}</th>
-                                        <th>{{ batch.ImportResponsible }}</th>
+                                        <td>{{ batch.ImportResponsible }}</td>
                                     </thead>
                                     <thead>
                                         <th>{{ 'tracking_page.center_arrival_time' | trans }}</th>
-                                        <th>{{ batch.CenterArrivalTime|date('Y年m月d日h:m:s') }}</th>
+                                        <td>{{ batch.CenterArrivalTime|date('Y年m月d日h:m:s') }}</td>
                                     </thead>
                                     <thead>
                                         <th>{{ 'tracking_page.arrival_responsible' | trans }}</th>
-                                        <th>{{ batch.ArrivalResponsible }}</th>
+                                        <td>{{ batch.ArrivalResponsible }}</td>
                                     </thead>
                                 </table>
                             </div>
