--- a/templates/index/seller_index.html.twig
+++ b/templates/index/seller_index.html.twig
@@ -88,7 +88,7 @@
                         {% for user in users %}
                             <tr>
                                 <td class="text-left">
-                                    <span class="font-weight-bold">{{ user.lastname ~ " " ~ user.firstname }}</span>
+                                    <span class="font-weight-bold"><a href="/user/show/{{ user.user_id }}&user" >{{ user.lastname ~ " " ~ user.firstname }}</a></span>
                                 </td>
                                 <td>
                                     {% if user.sex %}{% set user_sex = 'user_infos.sex.' ~ user.sex %}
