--- a/templates/user/userList_admins.html.twig
+++ b/templates/user/userList_admins.html.twig
@@ -152,7 +152,7 @@
                                     {% for user in users %}
                                         <tr>
                                             <td class="text-left">
-                                                <span class="font-weight-bold">{{ user.lastname ~ " " ~ user.firstname }}</span>
+                                                <span class="font-weight-bold"><a href="/user/show/{{ user.userid }}&user" > {{ user.lastname ~ " " ~ user.firstname }}</a> </span>
                                             </td>
                                             <td>
                                                 {{ user.username }}
